--- a/myCSSSubsites.css
+++ b/myCSSSubsites.css
@@ -292,9 +292,5 @@ li {
     .overviewTimeTools {
         padding-right: 15vw;
     }
-
-    #footer {
-        display: none;
-    }
 }
 
